# fcp-core

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  FCPv2 Initial meeting.md  LICENSE  Makefile  README.md  conftest.py  journal.md  notes.md  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py  sudo  tox.ini
dbc/: FST09e.dbc
doc/: Logo-FST-Lisboa.eps  fcp.sty  fcp.tex  makefile  ulisboa.eps
docs/: api.rst  conf.py  fcp.rst  fcp_dbc.rst  fcp_nop.rst  hacking.rst  index.rst  requirements.txt  services.rst  syntax.rst
example/: example.fcp  example.fpi  fst10e.fcp  fst10e1.fcp  fst10ev2.fcp  iib.fcp  service.fcp  temperature.fcp
fcp/: __init__.py  __main__.py  c_generator.py  can.py  codegen.py  config.py  dbc_reader.py  dbc_writer.py  device.py  dirs.py  docs.py  docs_css.py  export_protobuf.py  fcp_lib.py  fcp_parser.py  fcp_v2.py  fpi.py  generator.py  gui.py  gui2.py  idl.py  input.py  log  result.py  search.py  spec.py  spec.tmp  sql.py  tags  template.py  undoredo.py  v2_parser.py  validator.py  verifier.py  version.py
fcp_c_src/: Makefile  a.out  minunit.h  signal_parser.h  signal_parser_test.c
fcp_cgen/: setup.py
fcp_serialization/: setup.py
fcp_v1_gen/: setup.py
hooks/: black  check_release_notes  pre-commit  pylint  ruff
iso_tp/: main.c  receiver.c  sender.c
json/: device_config.json  ecu1.yaml  example1.json  example1.yaml  fst10e.fcp  fst10e.hjson  fst10e.json  fst10e_enums.json  (+11 more)
plugins/fcp_dbc/: README.md  dbc_reader.py  pyproject.toml
plugins/fcp_dbc/example/: example.fcp
plugins/fcp_dbc/fcp_dbc/: __init__.py  dbc_writer.py  generator.py
plugins/fcp_dbc/tests/: test_examples.py  test_generator.py
plugins/fcp_dbc/tests/configs/: 001_basic_struct.dbc  001_basic_struct.fcp  002_nested_enum.dbc  002_nested_enum.fcp  003_nested_struct.dbc  003_nested_struct.fcp  004_nested_nested_struct.dbc  004_nested_nested_struct.fcp  005_small_types.dbc  005_small_types.fcp  006_big_endian.dbc  006_big_endian.fcp  007_muxed_signals.dbc  007_muxed_signals.fcp
plugins/fcp_dbc/tests/schemas/: 001_basic_struct.dbc  004_nested_nested_struct.fcp
plugins/fcp_dbc/tests/schemas/generator/: 001_basic_struct.fcp  001_basic_struct_default.dbc  002_nested_enum.fcp  002_nested_enum_default.dbc  003_nested_struct.fcp  003_nested_struct_default.dbc  004_nested_nested_struct.fcp  005_small_types.fcp  006_big_endian.fcp  007_muxed_signals.fcp  008_simple_array.dbc  008_simple_array.fcp  008_simple_array_default.dbc  009_compounded_type_array.dbc  009_compounded_type_array.fcp  009_compounded_type_array_default.dbc  010_multiple_bus.fcp  010_multiple_bus_bus1.dbc
plugins/fcp_dbc/tests/schemas/verifier/: 000_no_error.fcp  001_duplicate_ids.fcp
plugins/fcp_nop/: README.md  pyproject.toml  setup.py
plugins/fcp_nop/fcp_nop/: __init__.py  generator.py
plugins/fcp_nop/tests/: test_fcp_nop.py
(+523 files in other folders)
