[project]
name = "fcp"
version = "1.0.0"
description = "CAN bus manager"
license = { file = "LICENSE" }
readme = "README.md"
url = "https://github.com/joajfreitas/fcp-core"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "lark>=1.1.5",
    "coloredlogs>=15.0.1",
    "pyserde>=0.15.0",
    "termcolor>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fcp = "fcp.__main__:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
