[project]
name = "fcp"
version = "1.0.0.dev1"
description = "CAN bus manager"
license = { file = "LICENSE" }
readme = "README.md"
url = "https://github.com/joajfreitas/fcp-core"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "lark>=1.1.5",
    "coloredlogs>=15.0.1",
    "pyserde>=0.15.0",
    "termcolor>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fcp = "fcp.__main__:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff.lint]
select = ["D"]
ignore = ["F402", "D105", "D107", "D401", "D404"]

[tool.mypy]
disable_error_code = ["no-redef"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310

[testenv]
extras = test
commands = pytest {posargs}
"""

[project.optional-dependencies]
test = [
    "pytest",
    "cantools",
    "marko",
    "docutils",
    "pygments",
    "hypothesis"
]
