[project]
name = "fcp_dbc"
version = "0.1.0"
description = "fcp can bus dbc schema generator"
license = { file = "LICENSE" }
readme = "README.md"
url = "https://github.com/joajfreitas/fcp-core"
requires-python = ">=3.9"
dependencies = [
    "fcp>=1.0.0",
    "cantools>=39.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
